--- a/todo.html
+++ b/todo.html
@@ -8,18 +8,14 @@
 <body>
     <header>
         <nav>Каталог</nav>
-        <nav>Блог</nav>
-        <nav>Контакты</nav>
-        <nav>Поиск</nav>
-        <nav></nav>
     </header>
     <div class="container">
-        <img src="img/стул.PNG" alt="">
-        <button>Купить</button>
-        <p>Santa trinita</p>
-        <p>Функциональная дизайнерская лампа для максимально комфортного освещения</p>
-        <p>150000</p>
+        <section>
+            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas enim cum tempore, voluptatibus ipsum et harum ducimus molestiae tenetur quis consectetur nam quae maiores. Eos provident nam repudiandae cupiditate dolores.</li>
+        </section>
     </div>
-    <footer></footer>
+    <footer>
+        <nav>Каталог</nav>
+    </footer>
 </body>
 </html>
