Добавление панели задач

--- a/todo.html
+++ b/todo.html
@@ -31,11 +31,14 @@
           </div>
         </div>
       </nav>
-    <div class="container">
-        <section>
-            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas enim cum tempore, voluptatibus ipsum et harum ducimus molestiae tenetur quis consectetur nam quae maiores. Eos provident nam repudiandae cupiditate dolores.</li>
-        </section>
-    </div>
+
+      <select class="form-select" multiple aria-label="пример множественного выбора">
+        <option selected>Откройте это меню выбора</option>
+        <option value="1">Один</option>
+        <option value="2">Два</option>
+        <option value="3">Три</option>
+      </select>
+      
     <footer>
         <nav>Каталог</nav>
     </footer>
